# Prism

./: .dockerignore  .gitignore  Makefile  README.md  package.json  pnpm-lock.yaml  project-plan.md  turbo.json
.github/workflows/: ci.yml
apps/api/: .env.example  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260512_0000_initial.py  20260512_0001_better_auth.py  20260512_0002_tenant_probe.py  20260512_0003_datasets.py  20260512_0004_dashboards_widgets.py  20260512_0005_chat.py  20260512_0006_sheet_columns.py  20260512_0007_subscriptions.py  20260513_0001_two_factor.py  20260513_0002_datasets_created_by_nullable.py  20260514_0001_dashboard_shares.py  20260514_0002_chat_tokens.py  20260514_0003_admin_bypass_policies.py  20260514_0004_app_role.py  20260515_0001_datasets_connected_by_user.py  20260515_0002_datasets_xls_source_kind.py  20260516_0001_datasets_worksheet_names.py  20260608_0001_header_offset_and_dash_customized.py  20260608_0002_datasets_header_plan.py  20260619_0001_invitation_created_at.py
apps/api/app/: config.py  db.py  main.py  worker.py
apps/api/app/routers/: admin.py  billing.py  chat.py  dashboards.py  datasets.py  me.py  share.py  sheets.py  tenant_probe.py  workspaces.py
apps/api/app/services/: anthropic_client.py  autodash.py  billing.py  cache.py  chat_agent.py  chat_tokens.py  duck.py  google_sheets.py  header_ai.py  ingest.py  minio_client.py  observability.py  overview.py  plans.py  profile.py  rate_limit.py  share.py  sheet_sync.py  token_crypto.py  widget_builder.py
apps/api/scripts/: entrypoint.sh
apps/api/tests/: test_header_ai_propose.py  test_header_ai_sanitize.py  test_header_confidence.py  test_header_detection.py  test_profile_normalize.py
apps/api/tests/fixtures/: Ahmedabad Safe City Queries.xlsx
apps/web/: .env.example  eslint.config.mjs  instrumentation.ts  next.config.ts  package.json  tsconfig.json
apps/web/app/: error.tsx  globals.css  (+3 more)
infra/: Caddyfile  Caddyfile.prod  Dockerfile.api  Dockerfile.web  backup.sh  docker-compose.local.yml  docker-compose.yml
(+137 files in other folders)
