[project]
name = "prism-api"
version = "0.0.0"
description = "Prism FastAPI backend."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "sqlalchemy>=2.0.36",
  "alembic>=1.13.3",
  "psycopg[binary]>=3.2.3",
  "asyncpg>=0.30.0",
  "redis>=5.2.0",
  "arq>=0.26.1",
  "httpx>=0.28.0",
  "python-jose[cryptography]>=3.3.0",
  "minio>=7.2.10",
  "pandas>=2.2.3",
  "openpyxl>=3.1.5",
  "xlrd>=2.0.1",
  "pyarrow>=18.0.0",
  "duckdb>=1.1.3",
  "anthropic>=0.40.0",
  "stripe>=11.0.0",
  "sentry-sdk[fastapi]>=2.18.0",
  "prometheus-fastapi-instrumentator>=7.0.0",
  "python-json-logger>=3.2.1",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8.0",
  "mypy>=1.13.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "ASYNC", "S", "RUF"]
ignore = [
  "S101",    # assert in tests is fine
  "B008",    # FastAPI Depends() in default args is intentional
  "S608",    # server-side SQL builders; all identifiers go through _quote_ident / allowlists
  "S110",    # try-except-pass is intentional in best-effort cleanup blocks
  "ASYNC240", # anyio.Path not available; pathlib.Path.unlink in async cleanup is acceptable
  "E501",    # line-length enforced by formatter; a few legacy lines exceed 100
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
# Alembic-generated migration files use older typing patterns; don't reformat history
"alembic/**" = ["S", "I001", "UP035", "UP007", "E501", "F401"]
"tests/**" = ["S"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
